Updated Mongo DB

--- a/Final_Code/Using HTML tag Web Extraction.ipynb
+++ b/Final_Code/Using HTML tag Web Extraction.ipynb
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "35e76314",
    "metadata": {},
    "outputs": [
@@ -1320,7 +1320,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-16 02:03:10,165 - INFO - Scraping BBC...\n"
+      "2025-07-31 16:35:47,099 - INFO - Scraping BBC...\n"
      ]
     },
     {
@@ -1334,18 +1334,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-16 02:03:16,839 - INFO - Scraping CNN...\n",
-      "2025-07-16 02:03:29,884 - INFO - Scraping Reuters...\n",
-      "2025-07-16 02:03:30,045 - ERROR - Error getting links from https://www.reuters.com: 401 Client Error: HTTP Forbidden for url: https://www.reuters.com/\n",
-      "2025-07-16 02:03:30,047 - INFO - Scraping AP News...\n",
-      "2025-07-16 02:03:50,470 - INFO - Scraping The Guardian...\n",
-      "2025-07-16 02:03:57,197 - INFO - Scraping Fox News...\n",
-      "2025-07-16 02:04:06,711 - INFO - Scraping NBC News...\n",
-      "2025-07-16 02:04:15,820 - INFO - Scraping CBS News...\n",
-      "2025-07-16 02:04:23,258 - INFO - Scraping ABC News...\n",
-      "2025-07-16 02:04:32,035 - INFO - Scraping USA Today...\n",
-      "2025-07-16 02:04:38,075 - INFO - Scraping The Indian Express...\n",
-      "2025-07-16 02:04:43,655 - INFO - Scraping Times of India...\n"
+      "2025-07-31 16:35:52,334 - INFO - Scraping CNN...\n",
+      "2025-07-31 16:36:36,327 - INFO - Scraping Reuters...\n",
+      "2025-07-31 16:36:36,444 - ERROR - Error getting links from https://www.reuters.com: 401 Client Error: HTTP Forbidden for url: https://www.reuters.com/\n",
+      "2025-07-31 16:36:36,446 - INFO - Scraping AP News...\n",
+      "2025-07-31 16:36:50,473 - INFO - Scraping The Guardian...\n",
+      "2025-07-31 16:36:55,981 - INFO - Scraping Fox News...\n",
+      "2025-07-31 16:37:03,804 - INFO - Scraping NBC News...\n",
+      "2025-07-31 16:37:09,264 - INFO - Scraping CBS News...\n",
+      "2025-07-31 16:37:15,451 - INFO - Scraping ABC News...\n",
+      "2025-07-31 16:37:22,506 - INFO - Scraping USA Today...\n",
+      "2025-07-31 16:37:27,583 - INFO - Scraping The Indian Express...\n",
+      "2025-07-31 16:37:32,726 - INFO - Scraping Times of India...\n"
      ]
     },
     {
@@ -1360,9 +1360,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-07-16 02:04:51,792 - ERROR - Error extracting from https://www.cnn.com/2024/01/15/example-article: 404 Client Error: Not Found for url: https://edition.cnn.com/2024/01/15/example-article\n",
-      "2025-07-16 02:04:51,799 - INFO - Saved 34 articles to news_articles.json\n",
-      "2025-07-16 02:04:51,805 - INFO - Saved 34 articles to news_articles.csv\n"
+      "2025-07-31 16:37:39,996 - ERROR - Error extracting from https://www.cnn.com/2024/01/15/example-article: 404 Client Error: Not Found for url: https://edition.cnn.com/2024/01/15/example-article\n",
+      "2025-07-31 16:37:40,001 - INFO - Saved 34 articles to news_articles.json\n",
+      "2025-07-31 16:37:40,010 - INFO - Saved 34 articles to news_articles.csv\n"
      ]
     },
     {
@@ -1374,62 +1374,58 @@
       "\n",
       "1. BBC News - Breaking news, video and the latest top stories from the U.S. and around the world\n",
       "   Source: BBC\n",
-      "   Date: 2025-07-16 | Time: 02:03:11\n",
+      "   Date: 2025-07-31 | Time: 16:35:47\n",
       "   URL: https://www.bbc.com/news\n",
-      "   Description: The existence of the scheme could not be reported until now because of a court injunction....\n",
-      "   Full Content Length: 7130 characters\n",
-      "   Full Content Preview: Thousands of Afghans were moved to UK in secret scheme after data breach\n",
+      "   Description: The US special envoy to the Middle East is in Israel today, after Canada joined the UK and France in...\n",
+      "   Full Content Length: 7470 characters\n",
+      "   Full Content Preview: Trump says Canada's move to recognise Palestinian state threatens trade deal\n",
       "\n",
-      "The existence of the scheme could not be reported until now because of a court injunction.\n",
-      "\n",
-      "I'm 'disappointed but not done' wi...\n",
+      "The US special envoy to the Middle East is in Israel today, after Canada joined the UK and France in planning to recognise...\n",
       "\n",
       "2. Israel Gaza war | Latest News & Updates | BBC News\n",
       "   Source: BBC\n",
-      "   Date: 2025-07-16 | Time: 02:03:13\n",
+      "   Date: 2025-07-31 | Time: 16:35:49\n",
       "   URL: https://www.bbc.com/news/topics/c2vdnvdg6xxt\n",
-      "   Description: Mahmoud Abdul Rahman's son, Abdullah, was among six children who died at a water distribution point ...\n",
-      "   Full Content Length: 5802 characters\n",
+      "   Description: Mark Carney says it depends on Palestinian democratic reforms, while Donald Trump says it could stym...\n",
+      "   Full Content Length: 5347 characters\n",
       "   Full Content Preview: Israel-Gaza war\n",
       "\n",
-      "Gaza father's outrage after Israeli strike kills son 'searching for sip' at water point\n",
+      "Canada follows France and UK with plan to recognise Palestinian state\n",
       "\n",
-      "Mahmoud Abdul Rahman's son, Abdullah, was among six children who died at a water distribution ...\n",
+      "Mark Carney says it depends on Palestinian democratic reforms, while Donald Trump says it could stymie a US-Cana...\n",
       "\n",
       "3. Ukraine War | Latest News & Updates| BBC News\n",
       "   Source: BBC\n",
-      "   Date: 2025-07-16 | Time: 02:03:15\n",
+      "   Date: 2025-07-31 | Time: 16:35:51\n",
       "   URL: https://www.bbc.com/news/war-in-ukraine\n",
-      "   Description: Kyiv's mayor is among those asking why there has to be a delay to introducing new tariffs as the fig...\n",
-      "   Full Content Length: 4928 characters\n",
+      "   Description: A boy and his mother are among the dead and Kyiv says it has seen the biggest number of child casual...\n",
+      "   Full Content Length: 5094 characters\n",
       "   Full Content Preview: War in Ukraine\n",
       "\n",
-      "Ukrainians unimpressed by Trump's 50-day ultimatum to Putin\n",
+      "Russian strikes kill eight and hit Kyiv apartment block, officials say\n",
       "\n",
-      "Kyiv's mayor is among those asking why there has to be a delay to introducing new tariffs as the fighting continues.\n",
-      "\n",
-      "I'm '...\n",
+      "A boy and his mother are among the dead and Kyiv says it has seen the biggest number of child casualties of the ...\n",
       "\n",
       "4. CNN newsletters: Subscribe for news, lifestyle, markets info and more | CNN\n",
       "   Source: CNN\n",
-      "   Date: 2025-07-16 | Time: 02:03:19\n",
+      "   Date: 2025-07-31 | Time: 16:36:17\n",
       "   URL: https://www.cnn.com/newsletters\n",
       "   Description: CNN News, delivered. Select from our newsletters below and enter your email to sign up....\n",
-      "   Full Content Length: 5715 characters\n",
+      "   Full Content Length: 5767 characters\n",
       "   Full Content Preview: Breaking News\n",
       "\n",
       "Be the first to know about the biggest stories as they break. Sign up for breaking news email alerts from CNN.\n",
       "\n",
       "Five Things AM\n",
       "\n",
-      "We’ll summarize five stories you need to know before star...\n",
+      "We‚Äôll summarize five stories you need to know before st...\n",
       "\n",
       "5. Arizona special primary election results live | CNN Politics\n",
       "   Source: CNN\n",
-      "   Date: None | Time: 02:03:26\n",
+      "   Date: None | Time: 16:36:19\n",
       "   URL: https://www.cnn.com/election/2025\n",
       "   Description: This November, two blue states where President Donald Trump gained ground in 2024 will elect new gov...\n",
-      "   Full Content Length: 3011 characters\n",
+      "   Full Content Length: 3019 characters\n",
       "   Full Content Preview: This November, two blue states where President Donald Trump gained ground in 2024 will elect new governors — offering a potential preview of next year’s critical midterms. In New York City, voters wil...\n",
       "\n",
       "Total articles extracted: 34\n",
@@ -2042,51 +2038,13 @@
     "    print(f\"\\nTotal articles extracted: {len(articles)}\")\n",
     "    print(\"Data saved to news_articles.json and news_articles.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3386a0c3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "d62eb2c0",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['__class__', '__delattr__', '__dict__', '__dir__', '__doc__', '__enter__', '__eq__', '__exit__', '__format__', '__ge__', '__getattribute__', '__getstate__', '__gt__', '__hash__', '__init__', '__init_subclass__', '__le__', '__lt__', '__module__', '__ne__', '__new__', '__reduce__', '__reduce_ex__', '__repr__', '__setattr__', '__sizeof__', '__str__', '__subclasshook__', '__weakref__', '_make_request', 'api_key', 'close', 'crawl', 'from_env', 'get_crawl', 'get_credits', 'get_markdownify', 'get_searchscraper', 'get_smartscraper', 'headers', 'markdownify', 'max_retries', 'retry_delay', 'searchscraper', 'session', 'smartscraper', 'submit_feedback', 'timeout']\n"
-     ]
-    }
-   ],
-   "source": [
-    "import os\n",
-    "from scrapegraph_py import Client\n",
-    "client = Client(api_key=\"sgai-3e5b40b7-ae60-490b-83f2-629a8c2a2891\")\n",
-    "\n",
-    "print(dir(client))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c9420cdb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "agno",
+   "display_name": "Python (your_env_name)",
    "language": "python",
-   "name": "python3"
+   "name": "your_env_name"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2098,7 +2056,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
