Fact Checker is completed and format of article score is modified

--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -43,8 +43,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "eec72e5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "UpdateResult({'n': 15, 'electionId': ObjectId('7fffffff0000000000000181'), 'opTime': {'ts': Timestamp(1755292840, 32), 't': 385}, 'nModified': 15, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1755292840, 32), 'signature': {'hash': b'A\\xb6n\\xa2\\xcd\\x1b\\x86\\xde\\xec\\xa5m\\xcdV\\x17\\xb3mM\\x8d\\x0f\\x84', 'keyId': 7481332897870249993}}, 'operationTime': Timestamp(1755292840, 32), 'updatedExisting': True}, acknowledged=True)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from pymongo import MongoClient\n",
+    "import certifi\n",
+    "\n",
+    "# Connect to MongoDB\n",
+    "client = MongoClient(\"mongodb+srv://darshvaishnani1234:wAssPV9RS3dm55la@newscluster.p2duvnj.mongodb.net/\", tlsCAFile=certifi.where())\n",
+    "db = client[\"NewsVerseDB\"]\n",
+    "collection = db[\"NewsVerseCo\"]\n",
+    "\n",
+    "# Update all documents\n",
+    "collection.update_many(\n",
+    "    {\n",
+    "    },\n",
+    "    {\n",
+    "        \"$unset\": {\n",
+    "            \"fact_check.user_verdict\": \"\"  # or False, depending on your default\n",
+    "        }\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "8229ffa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Migrated 15 documents to new 'article_score' format.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import certifi\n",
+    "from pymongo import MongoClient\n",
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# -----------------------------\n",
+    "# MongoDB Connection\n",
+    "# -----------------------------\n",
+    "MONGO_URI = os.getenv(\"MONGO_URI\", \"mongodb+srv://darshvaishnani1234:wAssPV9RS3dm55la@newscluster.p2duvnj.mongodb.net/\")\n",
+    "client = MongoClient(MONGO_URI, tlsCAFile=certifi.where())\n",
+    "news_col = client[\"NewsVerseDB\"][\"NewsVerseCo\"]\n",
+    "\n",
+    "def migrate_scores():\n",
+    "    count = 0\n",
+    "    cursor = news_col.find({\n",
+    "        \"$or\": [\n",
+    "            {\"llm_score\": {\"$exists\": True}},\n",
+    "            {\"final_custom_score\": {\"$exists\": True}},\n",
+    "            {\"user_article_score\": {\"$exists\": True}}\n",
+    "        ]\n",
+    "    })\n",
+    "\n",
+    "    for doc in cursor:\n",
+    "        article_score = {\n",
+    "            \"user_article_score\": doc.get(\"user_article_score\"),\n",
+    "            \"llm_score\": doc.get(\"llm_score\"),\n",
+    "            \"final_custom_score\": doc.get(\"final_custom_score\")\n",
+    "        }\n",
+    "\n",
+    "        # Remove None values (optional)\n",
+    "        article_score = {k: v for k, v in article_score.items() if v is not None}\n",
+    "\n",
+    "        news_col.update_one(\n",
+    "            {\"_id\": doc[\"_id\"]},\n",
+    "            {\n",
+    "                \"$set\": {\"article_score\": article_score},\n",
+    "                \"$unset\": {\n",
+    "                    \"llm_score\": \"\",\n",
+    "                    \"final_custom_score\": \"\",\n",
+    "                    \"user_article_score\": \"\"\n",
+    "                }\n",
+    "            }\n",
+    "        )\n",
+    "        count += 1\n",
+    "\n",
+    "    print(f\"✅ Migrated {count} documents to new 'article_score' format.\")\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    migrate_scores()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cd5b7149",
    "metadata": {},
    "outputs": [],
    "source": []
