sentiment analysis is done

--- a/sample_run.ipynb
+++ b/sample_run.ipynb
@@ -50,7 +50,7 @@
     {
      "data": {
       "text/plain": [
-       "UpdateResult({'n': 15, 'electionId': ObjectId('7fffffff0000000000000181'), 'opTime': {'ts': Timestamp(1755346664, 17), 't': 385}, 'nModified': 15, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1755346664, 17), 'signature': {'hash': b'c\\xbb\\xdd\\xd6\\xb90t\\x82\\xc8-\\x0e\\xe3!\\xaa4\\x0e-\\x87x\\xbe', 'keyId': 7481332897870249993}}, 'operationTime': Timestamp(1755346664, 17), 'updatedExisting': True}, acknowledged=True)"
+       "UpdateResult({'n': 15, 'electionId': ObjectId('7fffffff0000000000000181'), 'opTime': {'ts': Timestamp(1755358697, 20), 't': 385}, 'nModified': 15, 'ok': 1.0, '$clusterTime': {'clusterTime': Timestamp(1755358697, 20), 'signature': {'hash': b'ZT\\xecUpho\\xeaSH\\x02\\x92\\x81\\x13\\xe4\\xbe\\x1e\\x1f|\\x1c', 'keyId': 7481332897870249993}}, 'operationTime': Timestamp(1755358697, 20), 'updatedExisting': True}, acknowledged=True)"
       ]
      },
      "execution_count": 1,
@@ -73,7 +73,7 @@
     "    },\n",
     "    {\n",
     "        \"$unset\": {\n",
-    "            \"sentiment_label\": \"\"  # or False, depending on your default\n",
+    "            \"sentiment_analysis\": \"\"  # or False, depending on your default\n",
     "        }\n",
     "    }\n",
     ")"
